# red-button-trigger-timestamp

./: Cargo.toml  README.md
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/src/: main.rs
hardware/: schematic.kicad_sch
hardware/enclosure/: bugs.txt  trigger-sniffer-box-v01 box base.stl  trigger-sniffer-box-v01.FCStd
red-button-trigger-timestamp/: Cargo.toml
red-button-trigger-timestamp-comms/: Cargo.toml
red-button-trigger-timestamp-comms/src/: lib.rs
red-button-trigger-timestamp/src/: clock_model.rs  main.rs
