[package]
name = "red-button-trigger-timestamp"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-serial = "5.4.4"
json-lines = { version = "0.1.1", features = ["codec"] }

red-button-trigger-timestamp-comms = { path = "../red-button-trigger-timestamp-comms", features = [
    "std",
] }
tokio-util = { version = "0.7.10", features = ["full"] }
futures-util = "0.3.30"
futures = "0.3.30"
